--- a/SapphireSelenium/test-output/old/Default suite/classes.html
+++ b/SapphireSelenium/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.sapphire.admin.Admin_Create_Workflow</td>
+<td>com.sapphire.admin.Admin_Create_Product</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TestMethodCreateWorkflow</td>
+<td>TestMethodCreateProduct</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
