--- a/SapphireSelenium/test-output/old/Default suite/methods-alphabetical.html
+++ b/SapphireSelenium/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a96eb5">  <td>14/06/11 17:03:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Admin_Create_Product.TestMethodCreateProduct()[pri:0, instance:com.sapphire.admin.Admin_Create_Product@1be4777]">TestMethodCreateProduct</td> 
-  <td>main@7192009</td>   <td></td> </tr>
-<tr bgcolor="9c9c91">  <td>14/06/11 17:03:42</td>   <td>-15015</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Config.doLogIn()[pri:0, instance:com.sapphire.admin.Admin_Create_Product@1be4777]">&gt;&gt;doLogIn</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@7192009</td>   <td></td> </tr>
-<tr bgcolor="9c9c91">  <td>14/06/11 17:04:21</td>   <td>23768</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Config.doLogOut()[pri:0, instance:com.sapphire.admin.Admin_Create_Product@1be4777]">&lt;&lt;doLogOut</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@7192009</td>   <td></td> </tr>
+<tr bgcolor="8c84d9">  <td>14/06/16 12:51:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Admin_WorkflowPrivileges.TestMethodWorkflowPrivileges()[pri:0, instance:com.sapphire.admin.Admin_WorkflowPrivileges@87a5cc]">TestMethodWorkflowPrivileges</td> 
+  <td>main@21539363</td>   <td></td> </tr>
+<tr bgcolor="82707e">  <td>14/06/16 12:51:03</td>   <td>-15508</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Config.doLogIn()[pri:0, instance:com.sapphire.admin.Admin_WorkflowPrivileges@87a5cc]">&gt;&gt;doLogIn</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@21539363</td>   <td></td> </tr>
+<tr bgcolor="82707e">  <td>14/06/16 12:52:00</td>   <td>40788</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Config.doLogOut()[pri:0, instance:com.sapphire.admin.Admin_WorkflowPrivileges@87a5cc]">&lt;&lt;doLogOut</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@21539363</td>   <td></td> </tr>
 </table>
