--- a/SapphireSelenium/test-output/old/Default suite/reporter-output.html
+++ b/SapphireSelenium/test-output/old/Default suite/reporter-output.html
@@ -1,2 +1,3 @@
 <h2>Reporter output</h2><table><tr><td>Expected text Sapphire matches actual test Sapphire</td></tr>
+<tr><td>Expected text Sapphire matches actual test Sapphire</td></tr>
 </table>
