--- a/SapphireSelenium/test-output/emailable-report.html
+++ b/SapphireSelenium/test-output/emailable-report.html
@@ -1,2 +1,91 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head><title>TestNG Report</title><style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}</style></head><body><table><tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr><tr><th colspan="7">Default suite</th></tr><tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">65,846</td><td></td><td></td></tr></table><table><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.sapphire.admin.Admin_WorkflowPrivileges</td><td><a href="#m0">TestMethodWorkflowPrivileges</a></td><td rowspan="1">1402903279319</td><td rowspan="1">40787</td></tr></tbody></table><h2>Default test</h2><h3 id="m0">com.sapphire.admin.Admin_WorkflowPrivileges#TestMethodWorkflowPrivileges</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Expected text Sapphire matches actual test Sapphire<br/>Expected text Sapphire matches actual test Sapphire</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p></body></html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>TestNG:  Unit Test</title>
+<style type="text/css">
+table caption,table.info_table,table.param,table.passed,table.failed {margin-bottom:10px;border:1px solid #000099;border-collapse:collapse;empty-cells:show;}
+table.info_table td,table.info_table th,table.param td,table.param th,table.passed td,table.passed th,table.failed td,table.failed th {
+border:1px solid #000099;padding:.25em .5em .25em .5em
+}
+table.param th {vertical-align:bottom}
+td.numi,th.numi,td.numi_attn {
+text-align:right
+}
+tr.total td {font-weight:bold}
+table caption {
+text-align:center;font-weight:bold;
+}
+table.passed tr.stripe td,table tr.passedodd td {background-color: #00AA00;}
+table.passed td,table tr.passedeven td {background-color: #33FF33;}
+table.passed tr.stripe td,table tr.skippedodd td {background-color: #cccccc;}
+table.passed td,table tr.skippedodd td {background-color: #dddddd;}
+table.failed tr.stripe td,table tr.failedodd td,table.param td.numi_attn {background-color: #FF3333;}
+table.failed td,table tr.failedeven td,table.param tr.stripe td.numi_attn {background-color: #DD0000;}
+tr.stripe td,tr.stripe th {background-color: #E6EBF9;}
+p.totop {font-size:85%;text-align:center;border-bottom:2px black solid}
+div.shootout {padding:2em;border:3px #4854A8 solid}
+</style>
+</head>
+<body>
+<table cellspacing=0 cellpadding=0 class="param">
+<tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
+<tr><td style="text-align:left;padding-right:2em">Database Test on Win7</td><td class="numi">2</td><td class="numi">2</td><td class="numi">0</td><td class="numi_attn">2</td><td class="numi">0.5 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+</table>
+<a id="summary"></a>
+<table cellspacing=0 cellpadding=0 class="passed">
+<tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Time<br/>(Msecs)</th></tr>
+<tr><th colspan="4">Database Test on Win7 &#8212; failed</th></tr>
+<tr class="failedodd"><td rowspan="2">com.sapphire.etl.AERSDrugVerify<td><a href="#m1"><b>drugCleaned_Null</b>  </a></td><td class="numi">1</td><td class="numi">30</td></tr><tr class="failedodd"><td><a href="#m2"><b>drugCleaned_GenericName</b>  </a></td><td class="numi">1</td><td class="numi">428</td></tr>
+<tr><th colspan="4">Database Test on Win7 &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="2">com.sapphire.etl.AERSDrugVerify<td><a href="#m3"><b>drugRole_Decode</b>  </a></td><td class="numi">1</td><td class="numi">28</td></tr><tr class="passedodd"><td><a href="#m4"><b>drugRole_Code</b>  </a></td><td class="numi">1</td><td class="numi">28</td></tr>
+</table>
+<h1>Database Test on Win7</h1>
+<a id="m1"></a><h2>com.sapphire.etl.AERSDrugVerify:drugCleaned_Null</h2>
+<div style="padding-left:3em">
+<h3>Test Messages</h3>
+Drug cleaned value is null<br/>
+Expected : [0]<br/>
+Actual : [1960]<br/>
+<h3>Failure</h3>
+<p>SELECT count(*) FROM aers.aers_drugs where drug_cleaned is null</p>
+org.testng.Assert.fail(Assert.java:83)
+<br/>at com.sapphire.etl.AERSDrugVerify.drugCleaned_Null(AERSDrugVerify.java:179)
+<br/>22 lines not shown
+<p>Caused by Lists differ at element [0]: 0 != 1960 expected [0] but found [1960]</p>
+org.testng.Assert.fail(Assert.java:94)
+<br/>at org.testng.Assert.failNotEquals(Assert.java:494)
+<br/>at org.testng.Assert.assertEquals(Assert.java:123)
+<br/>at org.testng.Assert.assertEquals(Assert.java:549)
+<br/>at org.testng.Assert.assertEquals(Assert.java:514)
+<br/>at com.sapphire.etl.AERSDrugVerify.drugCleaned_Null(AERSDrugVerify.java:169)
+<br/>22 lines not shown
+</div>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<a id="m2"></a><h2>com.sapphire.etl.AERSDrugVerify:drugCleaned_GenericName</h2>
+<div style="padding-left:3em">
+<h3>Test Messages</h3>
+If drug is cleaned ,generic name should not be null<br/>
+Expected : [0]<br/>
+Actual : [17288]<br/>
+<h3>Failure</h3>
+<p>SELECT count(*) FROM aers.aers_drugs where drug_cleaned is not null and generic_name is null or generic_name=&apos;&apos;</p>
+org.testng.Assert.fail(Assert.java:94)
+<br/>at com.sapphire.etl.AERSDrugVerify.drugCleaned_GenericName(AERSDrugVerify.java:139)
+<br/>22 lines not shown
+</div>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<a id="m3"></a><h2>com.sapphire.etl.AERSDrugVerify:drugRole_Decode</h2>
+<div style="padding-left:3em">
+SELECT distinct role_dec FROM aers.aers_drugs<br/>
+Expected : [CONCOMITANT, SECONDARY SUSPECT, PRIMARY SUSPECT, INTERACTING]<br/>
+Actual : [CONCOMITANT, SECONDARY SUSPECT, PRIMARY SUSPECT, INTERACTING]<br/>
+</div>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<a id="m4"></a><h2>com.sapphire.etl.AERSDrugVerify:drugRole_Code</h2>
+<div style="padding-left:3em">
+SELECT distinct role_code FROM aers.aers_drugs<br/>
+Expected : [C, I, O, PS, S, SS]<br/>
+Actual : [C, I, O, PS, S, SS]<br/>
+</div>
+<p class="totop"><a href="#summary">back to summary</a></p>
+</body></html>
